--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
 		"@chakra-ui/react": "^2.4.9",
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
+		"@rainbow-me/rainbowkit": "^0.8.1",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
+		"ethers": "^5.7.2",
 		"framer-motion": "^6.5.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^3.11.0",
 		"react-router-dom": "^6.8.0",
 		"react-scripts": "5.0.1",
+		"wagmi": "^0.9.6",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
